# temper_contrl

./: CMakeLists.txt  Contral_ui.qml  G_CircularGauge_ui.qml  G_Slider_Spin.qml  G_gauge.qml  Gauge_view_ui.qml  Plot_view_ui.qml  README.md  Res.qrc  Tao_custom.qrc  Taotitle_ui.qml  content_ui.qml  contral_tcp.cpp  contral_tcp.h  g_tcp_model.cpp  g_tcp_model.h  login.qrc  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
TaoQuick/: TaoQuick.qrc  qmldir
TaoQuick/Qml/: CusConfig.qml  Temper_Config.qml
TaoQuick/Qml/Basic/: BasicText.qml
TaoQuick/Qml/CusButton/: CusButton.qml
TaoQuick/Qml/CusCheckBox/: CusSwitch.qml
TaoQuick/Qml/CusComboBox/: CusComboBox.qml
TaoQuick/Qml/CusInput/: CusIPAddress.qml  CusTextField_Valid.qml
TaoQuick/Qml/CusLabel/: CusLabel.qml  CusLabel_Center.qml  CusLabel_Left.qml
TaoQuick/Qml/CusSlider/: CusSlider.qml  CusSlider_Spin.qml  CusSlider_Spin_Cls.qml
Tao_custom_Qml/Biz/: CircleText.qml  CloseBtn.qml  ExpandBtn.qml  LangBtn.qml  SkinBtn.qml
Tao_custom_Qml/Dialog/: AboutDialog.qml  Colorpicker.qml
Tao_custom_Qml/Pane/: ContentModel.qml
Tao_custom_Qml/instrument/: DashboardGaugeStyle.qml  S5WDial.qml
login/: login.qml
login/qml/controls/: FormInput.qml  StandardButton.qml
protocols/G_tool/: ini_wr.cpp  ini_wr.h
protocols/Modbus/client/: g_modbustcpclient.h
protocols/SSokit/: ClientModel.cpp  ClientModel.h  JsonFormat.cpp  JsonFormat.h  LogMessageModel.cpp  LogMessageModel.h  TcpClientModel.cpp  TreeItem.h  toolkit.cpp  toolkit.h
protocols/Serialports/: g_serialports.h
protocols/TCP/client/: g_tcp_client.h
thridtool/QCustomPlot/qcustomplot/: axistag.cpp  axistag.h
thridtool/QCustomPlot/qcustomplot/Anvedi/qml-lib/: RegisterAll.cpp  qmlAxis.cpp  qmlAxis.h  qmlGraph.cpp  qmlGraph.h  qmlLegend.cpp  qmlPlotPaintedItem.cpp  qmlPlotPaintedItem.h
thridtool/QCustomPlot/qcustomplotapi/: qcustom_api.cpp  qcustom_api.h
thridtool/framelesswindow_all/: framelesswindow.cpp  framelesswindow.h
thridtool/taoQucik_t/cmake/: taoQuick.cmake
thridtool/taoQucik_t/src/TaoQuick/Qml/: CusConfig.qml
thridtool/taoQucik_t/src/TaoQuick/Qml/CusLabel/: CusLabel_Center.qml
